--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,26 @@
 {
     "name": "rakibdevs/laravel-query-extra",
+    "keywords": ["laravel","query","query builder","bulk update"],
+    "authors": [
+        {
+            "name": "Md. Rakibul Islam",
+            "email": "rakib1708@gmail.com",
+            "website": "https:://rakibul.dev"
+        }
+    ],
     "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "RakibDevs\\QueryExtra\\": "src"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "RakibDevs\\QueryExtra\\QueryExtraServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "dev",
     "version": "dev-master"
 }
